# qwed-open

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: METHODOLOGY.md  api_runner.py  dataset.py
docs/: BENCHMARK_REPORT.md  ENGINE_ARCHITECTURE.md  OPEN_SOURCE_STRATEGY.md  RESEARCH_MANIFESTO.md
examples/: js_example.ts  python_example.py
sdk/javascript/: README.md  package.json  tsconfig.json
sdk/javascript/src/: index.ts
sdk/python/: README.md  pyproject.toml
sdk/python/qwed/: __init__.py  client.py  models.py
